# asm_text_task

./: CMakeLists.txt  README.md
asm_funcs/: apply_rule_1.s  apply_rule_2.s  property.s
c_funcs/: funcs.c
main/: funcs.c  main.cpp  test_cases.h  test_functions.h
test/: test_asm.cpp  test_c.cpp  test_cases.h
